--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </body>
 
 <script type="text/javascript">
-var app = Elm.Bingo.fullscreen(Elm.Bingo);
+var app = Elm.Bingo.fullscreen();
 </script>
 
 </html>
